--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/jquery.timepicker.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ceylon-sang.css">
+    <link rel="stylesheet" href="css/ceylon-sang.css">`r`n    <link rel="stylesheet" href="css/mobile-enhancements.css">
 </head>
 
 <body>
