--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Hero Section with Video Background -->
     <section class="hero-wrap js-fullheight">
         <!-- Video Background -->
-        <video autoplay muted loop playsinline id="hero-video" class="hero-video">
+        <video autoplay muted loop playsinline webkit-playsinline preload="auto" id="hero-video" class="hero-video">
             <source src="https://cdn.pixabay.com/video/2022/09/21/132140-752588954_large.mp4" type="video/mp4">
             <!-- Fallback for browsers that don't support video -->
         </video>
@@ -485,6 +485,7 @@
     <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/scrollax.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/video-autoplay.js"></script>
 </body>
 
 </html>
