--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Montserrat:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Montserrat:wght@400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -16,7 +18,9 @@
     <link rel="stylesheet" href="css/jquery.timepicker.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ceylon-sang.css">`r`n    <link rel="stylesheet" href="css/mobile-enhancements.css">
+    <link rel="stylesheet" href="css/ceylon-sang.css">`r`n
+    <link rel="stylesheet" href="css/mobile-enhancements.css">
+    <link rel="stylesheet" href="css/auth-modal.css">
 </head>
 
 <body>
@@ -152,117 +156,8 @@
                     <p>Read reviews from tourists who have experienced Sri Lanka with Ceylon Sang</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-4 ftco-animate">
-                    <div class="review-card">
-                        <div class="review-rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>"Ceylon Sang made our Sri Lankan honeymoon absolutely magical! The personalized attention,
-                            local insights, and beautiful destinations exceeded all our expectations. Our guide was
-                            knowledgeable, friendly, and went above and beyond. Highly recommended!"</p>
-                        <div class="review-author">
-                            <strong>Sarah & John Mitchell</strong><br>
-                            <small>Australia - Cultural Triangle Tour</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 ftco-animate">
-                    <div class="review-card">
-                        <div class="review-rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>"An unforgettable experience! Our guide was incredibly knowledgeable about Sri Lankan history
-                            and culture. The wildlife safari was breathtaking - we saw leopards, elephants, and so many
-                            birds. Every detail was perfectly planned. Thank you, Ceylon Sang!"</p>
-                        <div class="review-author">
-                            <strong>Michael Chen</strong><br>
-                            <small>Singapore - Complete Sri Lanka Package</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 ftco-animate">
-                    <div class="review-card">
-                        <div class="review-rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>"The tea plantation tour was absolutely stunning! The scenic train ride through the mountains
-                            was a highlight. Ceylon Sang knows all the best spots and hidden gems. Professional,
-                            reliable, and genuinely caring. We'll definitely be back!"</p>
-                        <div class="review-author">
-                            <strong>Emma Thompson</strong><br>
-                            <small>United Kingdom - Hill Country Tour</small>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-4">
-                <div class="col-md-4 ftco-animate">
-                    <div class="review-card">
-                        <div class="review-rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>"Best tour guide service in Sri Lanka! From the moment we arrived until we left, everything
-                            was seamless. The beaches were pristine, the food was amazing, and the whale watching was
-                            incredible. Ceylon Sang made our family vacation perfect!"</p>
-                        <div class="review-author">
-                            <strong>The Rodriguez Family</strong><br>
-                            <small>Spain - Beach & Wildlife Safari</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 ftco-animate">
-                    <div class="review-card">
-                        <div class="review-rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>"I traveled solo and felt completely safe and well-cared for. The custom itinerary was
-                            perfect for my interests. Sigiriya was breathtaking, and the cultural experiences were
-                            authentic and meaningful. Thank you for an amazing adventure!"</p>
-                        <div class="review-author">
-                            <strong>Lisa Anderson</strong><br>
-                            <small>USA - Custom Tour Package</small>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 ftco-animate">
-                    <div class="review-card">
-                        <div class="review-rating">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                        </div>
-                        <p>"Excellent service from start to finish! The accommodations were comfortable, the vehicle was
-                            clean and modern, and our guide's English was perfect. We learned so much about Sri Lankan
-                            culture and history. Highly professional team!"</p>
-                        <div class="review-author">
-                            <strong>Hans & Greta Mueller</strong><br>
-                            <small>Germany - Grand Sri Lanka Tour</small>
-                        </div>
-                    </div>
-                </div>
+            <div class="owl-carousel" id="reviews-carousel">
+                <!-- Reviews will be loaded dynamically here -->
             </div>
         </div>
     </section>
@@ -279,16 +174,19 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <form action="#" class="contact-form bg-light p-5">
+                    <form id="reviewForm" class="contact-form bg-light p-5">
+                        <div id="reviewMessage" class="alert" style="display:none;"></div>
                         <div class="form-group">
                             <label for="review-name">Your Name *</label>
                             <input type="text" class="form-control" id="review-name" placeholder="Enter your name"
-                                required>
+                                required disabled>
+                            <small class="text-muted">Name from your account</small>
                         </div>
                         <div class="form-group">
                             <label for="review-email">Email Address *</label>
                             <input type="email" class="form-control" id="review-email" placeholder="Enter your email"
-                                required>
+                                required disabled>
+                            <small class="text-muted">Email from your account</small>
                         </div>
                         <div class="form-group">
                             <label for="review-country">Country</label>
@@ -312,7 +210,7 @@
                         <div class="form-group">
                             <label>Rating *</label><br>
                             <div class="star-rating">
-                                <input type="radio" id="star5" name="rating" value="5" required>
+                                <input type="radio" id="star5" name="rating" value="5">
                                 <label for="star5" title="5 stars">★</label>
                                 <input type="radio" id="star4" name="rating" value="4">
                                 <label for="star4" title="4 stars">★</label>
@@ -330,7 +228,8 @@
                                 placeholder="Share your experience with Ceylon Sang..." required></textarea>
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Submit Review" class="btn btn-primary py-3 px-5">
+                            <input type="submit" value="Submit Review" class="btn btn-primary py-3 px-5"
+                                id="reviewSubmitBtn">
                         </div>
                     </form>
                 </div>
@@ -465,6 +364,75 @@
     <script src="js/bootstrap-datepicker.js"></script>
     <script src="js/scrollax.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/video-autoplay.js"></script>
+
+    <!-- Login Modal -->
+    <div id="loginModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Login to Ceylon Sang</h2>
+                <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div id="loginError" class="error-message"></div>
+                <form id="loginForm">
+                    <div class="form-group">
+                        <label for="loginEmail">Email Address</label>
+                        <input type="email" id="loginEmail" name="email" required placeholder="Enter your email">
+                    </div>
+                    <div class="form-group">
+                        <label for="loginPassword">Password</label>
+                        <input type="password" id="loginPassword" name="password" required
+                            placeholder="Enter your password">
+                    </div>
+                    <button type="submit" class="btn-auth">Login</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <p>Don't have an account? <a onclick="switchToSignup()">Sign up here</a></p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Signup Modal -->
+    <div id="signupModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2>Create Account</h2>
+                <button class="close-modal" onclick="closeModal('signupModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div id="signupError" class="error-message"></div>
+                <form id="signupForm">
+                    <div class="form-group">
+                        <label for="signupName">Full Name</label>
+                        <input type="text" id="signupName" name="name" required placeholder="Enter your full name">
+                    </div>
+                    <div class="form-group">
+                        <label for="signupEmail">Email Address</label>
+                        <input type="email" id="signupEmail" name="email" required placeholder="Enter your email">
+                    </div>
+                    <div class="form-group">
+                        <label for="signupPassword">Password</label>
+                        <input type="password" id="signupPassword" name="password" required
+                            placeholder="At least 6 characters">
+                    </div>
+                    <div class="form-group">
+                        <label for="signupConfirmPassword">Confirm Password</label>
+                        <input type="password" id="signupConfirmPassword" name="confirmPassword" required
+                            placeholder="Re-enter your password">
+                    </div>
+                    <button type="submit" class="btn-auth">Create Account</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <p>Already have an account? <a onclick="switchToLogin()">Login here</a></p>
+            </div>
+        </div>
+    </div>
+
+    <script src="js/auth.js"></script>
+    <script src="js/reviews.js"></script>
 </body>
 
 </html>
