--- a/index.html
+++ b/index.html
@@ -329,55 +329,8 @@
             </div>
             <div class="row ftco-animate">
                 <div class="col-md-12">
-                    <div class="carousel-testimony owl-carousel">
-                        <div class="item">
-                            <div class="testimony-wrap py-4">
-                                <div class="text">
-                                    <p class="mb-4">Ceylon Sang made our Sri Lankan honeymoon absolutely magical! The
-                                        personalized attention and local insights were incredible. Highly recommended!
-                                    </p>
-                                    <div class="d-flex align-items-center">
-                                        <div class="user-img" style="background-image: url(images/person_1.jpg)"></div>
-                                        <div class="pl-3">
-                                            <p class="name">Sarah & John Mitchell</p>
-                                            <span class="position">Australia</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="testimony-wrap py-4">
-                                <div class="text">
-                                    <p class="mb-4">An unforgettable experience! Our guide was knowledgeable, friendly,
-                                        and went above and beyond to ensure we had the best time exploring Sri Lanka.
-                                    </p>
-                                    <div class="d-flex align-items-center">
-                                        <div class="user-img" style="background-image: url(images/person_2.jpg)"></div>
-                                        <div class="pl-3">
-                                            <p class="name">Michael Chen</p>
-                                            <span class="position">Singapore</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="testimony-wrap py-4">
-                                <div class="text">
-                                    <p class="mb-4">The wildlife safari was breathtaking! We saw elephants, leopards,
-                                        and so many birds. Ceylon Sang knows all the best spots. Thank you for an
-                                        amazing trip!</p>
-                                    <div class="d-flex align-items-center">
-                                        <div class="user-img" style="background-image: url(images/person_3.jpg)"></div>
-                                        <div class="pl-3">
-                                            <p class="name">Emma Thompson</p>
-                                            <span class="position">United Kingdom</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="owl-carousel" id="reviews-carousel">
+                        <!-- Reviews will be loaded dynamically via js/reviews.js -->
                     </div>
                 </div>
             </div>
@@ -558,6 +511,8 @@
 
     <!-- Authentication Script -->
     <script src="js/auth.js"></script>
+    <!-- Reviews Script -->
+    <script src="js/reviews.js"></script>
 </body>
 
 </html>
