--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@
                     <li class="nav-item"><a href="packages.html" class="nav-link">Tour Packages</a></li>
                     <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
                     <li class="nav-item active"><a href="contact.html" class="nav-link">Contact</a></li>
+                    <li class="nav-item" id="authButton">
+                        <button onclick="openModal('loginModal')" class="btn btn-sm btn-outline-light">Login</button>
+                    </li>
                 </ul>
             </div>
         </div>
