style: Replace video background with a static image on the contact page.

--- a/contact.html
+++ b/contact.html
@@ -48,12 +48,7 @@
         </div>
     </nav>
 
-    <section class="hero-wrap hero-wrap-2 js-fullheight" style="position: relative; overflow: hidden;">
-        <video autoplay muted loop playsinline class="hero-video"
-            style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: -1;">
-            <source src="images/contact-video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+    <section class="hero-wrap hero-wrap-2 js-fullheight" style="background-image: url('images/bg_1.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
