--- a/services.html
+++ b/services.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ceylon-sang.css">`r`n
     <link rel="stylesheet" href="css/mobile-enhancements.css">
+    <link rel="stylesheet" href="css/auth-modal.css">
 </head>
 
 <body>
