--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/jquery.timepicker.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ceylon-sang.css">`r`n
+    <link rel="stylesheet" href="css/ceylon-sang.css">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
 </head>
