--- a/destinations.html
+++ b/destinations.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ceylon-sang.css?v=2.0">
+    <link rel="stylesheet" href="css/ceylon-sang-grid.css">
     <link rel="stylesheet" href="css/modal-fix.css?v=2.1">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
@@ -539,7 +540,8 @@
 
                 <!-- Negombo -->
                 <div class="destination-detail" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-negombo.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/negombo/negombo.jpg);">
                         <div class="card-badge category">BEACH</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.4</div>
                     </div>
@@ -605,7 +607,8 @@
 
                 <!-- Kalutara (Simplified) -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-2.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Kalutara\ Bodhiya/kaluthara.jpg);">
                         <div class="card-badge category">RELIGIOUS</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.6</div>
                     </div>
@@ -637,7 +640,8 @@
 
                 <!-- Kelaniya -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-3.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Kelaniya/kelaniya.jpg);">
                         <div class="card-badge category">RELIGIOUS</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -757,7 +761,8 @@
                 <!-- Mirissa (Restored) -->
                 <!-- Mirissa -->
                 <div class="destination-detail" id="mirissa" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-6.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/mirissa/mirissa.jpg);">
                         <div class="card-badge category">BEACH</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -797,7 +802,8 @@
                 <!-- Unawatuna (Detailed) -->
                 <!-- Unawatuna -->
                 <div class="destination-detail" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-6.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Unawatuna/Unawatuna.jpg);">
                         <div class="card-badge category">BEACH</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.7</div>
                     </div>
@@ -831,7 +837,8 @@
                 <!-- Hikkaduwa (Detailed) -->
                 <!-- Hikkaduwa -->
                 <div class="destination-detail" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-hikkaduwa.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Hikkaduwa/Hikkaduwa.jpg);">
                         <div class="card-badge category">BEACH</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.6</div>
                     </div>
@@ -1004,7 +1011,8 @@
                 <!-- Jaffna Fort (Detailed) -->
                 <!-- Jaffna Fort -->
                 <div class="destination-detail" data-category="heritage">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-jaffna.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/jaffna/jaffnaport.jpg);">
                         <div class="card-badge category">HERITAGE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.6</div>
                     </div>
@@ -1173,7 +1181,8 @@
                 </div>
                 <!-- Nilaveli -->
                 <div class="destination-detail" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-8.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Nilaveli/Nilaveli.jpg);">
                         <div class="card-badge category">BEACH</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -1206,7 +1215,8 @@
                 </div>
                 <!-- Arugam Bay -->
                 <div class="destination-detail" data-category="beach">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-arugambay.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Arugambay/ArugamBay.jpg);">
                         <div class="card-badge category">SURFING</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.9</div>
                     </div>
@@ -1355,7 +1365,8 @@
                 <!-- Polonnaruwa (Simplified) -->
                 <!-- Polonnaruwa -->
                 <div class="destination-detail" id="polonnaruwa" data-category="heritage">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-polonnaruwa.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/polonnaruwa/polonnaruwa.jpg);">
                         <div class="card-badge category">HERITAGE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
@@ -1426,7 +1437,8 @@
                 </div>
                 <!-- Mihintale -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-mihintale.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Mihintale/Mihintale.jpg);">
                         <div class="card-badge category">RELIGIOUS</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.6</div>
                     </div>
@@ -1523,7 +1535,8 @@
                 </div>
                 <!-- Yapahuwa -->
                 <div class="destination-detail" data-category="heritage">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-yapahuwa.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Yapahuwa/Yapahuwa.jpg);">
                         <div class="card-badge category">HERITAGE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.4</div>
                     </div>
@@ -1587,7 +1600,8 @@
                 </div>
                 <!-- Munneswaram -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/destination-2.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Munneswaram/Munneswaram.jpg);">
                         <div class="card-badge category">RELIGIOUS</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.5</div>
                     </div>
@@ -1690,7 +1704,8 @@
                 </div>
                 <!-- Lipton's Seat -->
                 <div class="destination-detail" data-category="adventure">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-liptons-seat.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/Lipton/LiptonSeat.jpg);">
                         <div class="card-badge category">NATURE</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.6</div>
                     </div>
@@ -1721,7 +1736,8 @@
                 </div>
                 <!-- Kataragama -->
                 <div class="destination-detail" data-category="cultural">
-                    <div class="destination-detail-img" style="background-image: url(images/dest-kataragama.jpg);">
+                    <div class="destination-detail-img"
+                        style="background-image: url(images/destinations/katharagama/katharagama.JPG);">
                         <div class="card-badge category">RELIGIOUS</div>
                         <div class="card-badge rating"><i class="fa fa-star"></i> 4.8</div>
                     </div>
