--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ceylon-sang.css">
+    <link rel="stylesheet" href="css/ceylon-sang-grid.css">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
 </head>
@@ -84,7 +85,7 @@
                     <p class="caps mb-4">Experience the magic of Sri Lanka with expert local guidance</p>
 
                     <!-- Key Highlights -->
-                    <div class="row mt-5 mb-4">
+                    <!-- <div class="row mt-5 mb-4">
                         <div class="col-md-3 col-6 mb-3">
                             <div class="hero-stat">
                                 <div class="icon-circle">
@@ -121,12 +122,86 @@
                                 <p>Years Experience</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
-                    <p class="mt-4">
-                        <a href="packages.html" class="btn btn-primary px-4 py-3 mr-2">Explore Our Tours</a>
-                        <a href="contact.html" class="btn btn-white px-4 py-3">Contact Us</a>
+                    <a href="packages.html" class="btn btn-primary px-4 py-3 mr-2">Explore Our Tours</a>
+                    <a href="https://wa.me/94771234567" target="_blank" class="btn btn-white px-4 py-3"><span
+                            class="fa fa-whatsapp mr-2"></span>WhatsApp Us</a>
                     </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Premium Experience Grid -->
+    <section class="premium-experience-grid">
+        <div class="container">
+            <div class="row justify-content-center mb-5">
+                <div class="col-md-7 text-center heading-section ftco-animate">
+                    <span class="subheading">Discover by Experience</span>
+                    <h2 class="mb-4">Curated Journeys</h2>
+                </div>
+            </div>
+
+            <div class="premium-grid-container">
+                <!-- Heritage (Large Item) -->
+                <div class="experience-item large" onclick="window.location.href='destinations.html#heritage'">
+                    <div class="experience-bg" style="background-image: url('images/dest-sigiriya.jpg');"></div>
+                    <div class="experience-badge"><i class="fa fa-history"></i></div>
+                    <div class="experience-overlay">
+                        <div class="experience-content">
+                            <h3>Heritage</h3>
+                            <p>Ancient cities and timeless monuments</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Wildlife (Standard) - Replaced Pristine -->
+                <div class="experience-item" onclick="window.location.href='destinations.html#wildlife'">
+                    <div class="experience-bg" style="background-image: url('images/dest-yala.jpg');"></div>
+                    <div class="experience-badge"><i class="fa fa-paw"></i></div>
+                    <div class="experience-overlay">
+                        <div class="experience-content">
+                            <h3>Wildlife</h3>
+                            <p>Leopards, elephants, and wild beauty</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Beach (Standard) - Renamed from Bliss -->
+                <div class="experience-item" onclick="window.location.href='destinations.html#beach'">
+                    <div class="experience-bg" style="background-image: url('images/dest-bentota.jpg');"></div>
+                    <div class="experience-badge"><i class="fa fa-sun-o"></i></div>
+                    <div class="experience-overlay">
+                        <div class="experience-content">
+                            <h3>Beach</h3>
+                            <p>Golden sands and turquoise waters</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Adventure (Standard) - Renamed from Thrills -->
+                <div class="experience-item" onclick="window.location.href='destinations.html#adventure'">
+                    <div class="experience-bg" style="background-image: url('images/dest-ella.jpg');"></div>
+                    <div class="experience-badge"><i class="fa fa-compass"></i></div>
+                    <div class="experience-overlay">
+                        <div class="experience-content">
+                            <h3>Adventure</h3>
+                            <p>Hiking, trekking, and adrenaline</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Cultural (Standard) - Renamed from Festive -->
+                <div class="experience-item" onclick="window.location.href='destinations.html#cultural'">
+                    <div class="experience-bg" style="background-image: url('images/dest-kandy.jpg');"></div>
+                    <div class="experience-badge"><i class="fa fa-university"></i></div>
+                    <div class="experience-overlay">
+                        <div class="experience-content">
+                            <h3>Cultural</h3>
+                            <p>Rich traditions and spiritual sites</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
