--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&family=Fraunces:wght@400;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@400;600;700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -32,32 +34,36 @@
 
 <body>
     <!-- Navigation -->
-    <!-- Premium Navigation -->
+    <!-- Premium Navigation: Full Width, Flat, Trustworthy -->
     <nav class="navbar" id="navbar">
-        <div class="logo-container">
-            <h1 class="logo">Ceylon Sang</h1>
-            <span class="tagline">SRI LANKAN TOUR GUIDE</span>
-        </div>
+        <div class="container-fluid d-flex align-items-center justify-content-between">
+            <div class="logo-container">
+                <h1 class="logo">Ceylon Sang</h1>
+                <span class="tagline">SRI LANKAN TOUR GUIDE</span>
+            </div>
 
-        <ul class="nav-links">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="destinations.html">Destinations</a></li>
-            <li><a href="packages.html">Tour Packages</a></li>
-            <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
+            <ul class="nav-links">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="destinations.html">Destinations</a></li>
+                <li><a href="packages.html">Tour Packages</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
 
-        <div id="authButton" class="user-actions">
-            <!-- Auth content injected by JS -->
-            <button onclick="openModal('loginModal')" class="btn-login-nav">Login</button>
-        </div>
+            <div id="authButton" class="user-actions">
+                <!-- Auth content injected by JS: No buttons, minimal text/icon -->
+                <a href="#" onclick="openModal('loginModal')" class="login-link">
+                    <span class="fa fa-user-circle-o mr-1"></span> Login
+                </a>
+            </div>
 
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </div>
     </nav>
     <!-- END nav -->
