--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="row">
-                        <div class="col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
+                        <div class="col-6 col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
                             <div class="services services-1 color-1 d-block img"
                                 style="background-image: url(images/services-1.jpg);">
                                 <div class="icon d-flex align-items-center justify-content-center"><span
@@ -243,7 +243,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
+                        <div class="col-6 col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
                             <div class="services services-1 color-2 d-block img"
                                 style="background-image: url(images/services-2.jpg);">
                                 <div class="icon d-flex align-items-center justify-content-center"><span
@@ -254,7 +254,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
+                        <div class="col-6 col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
                             <div class="services services-1 color-3 d-block img"
                                 style="background-image: url(images/services-3.jpg);">
                                 <div class="icon d-flex align-items-center justify-content-center"><span
@@ -265,7 +265,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
+                        <div class="col-6 col-md-12 col-lg-6 d-flex align-self-stretch ftco-animate">
                             <div class="services services-1 color-4 d-block img"
                                 style="background-image: url(images/services-4.jpg);">
                                 <div class="icon d-flex align-items-center justify-content-center"><span
