--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="logo-container">
                 <h1 class="logo">Ceylon Sang</h1>
-                <span class="tagline">SRI LANKAN TOUR GUIDE</span>
+                <span class="tagline">SRI LANKAN TOUR GUIDEr</span>
             </div>
 
             <ul class="nav-links">
